--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PASSWORD_SECRET='twitter@1303!'
 JWT_SECRET='54321!'
 ACCESS_TOKEN_EXPIRES_IN='15m'
 REFRESH_TOKEN_EXPIRES_IN='7d'
+
+DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
