feat: verify email and resend verify email

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 DB_NAME=twitter
 PASSWORD_SECRET='twitter@1303!'
-JWT_SECRET='54321!'
+JWT_SECRET_ACCESS_TOKEN='54321!'
+JWT_SECRET_REFRESH_TOKEN='54321!rf'
+JWT_SECRET_VERIFY_EMAIL_TOKEN='54321!email'
 ACCESS_TOKEN_EXPIRES_IN='15m'
 REFRESH_TOKEN_EXPIRES_IN='7d'
+EMAIL_VERIFY_TOKEN_EXPIRES_IN='30m'
 
 DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
