feat: forgot password and verify forgoy password token

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PASSWORD_SECRET='twitter@1303!'
 JWT_SECRET_ACCESS_TOKEN='54321!'
 JWT_SECRET_REFRESH_TOKEN='54321!rf'
 JWT_SECRET_VERIFY_EMAIL_TOKEN='54321!email'
+JWT_SECRET_FORGOT_PASSWORD_TOKEN='54321!forgotpassword'
 ACCESS_TOKEN_EXPIRES_IN='15m'
 REFRESH_TOKEN_EXPIRES_IN='7d'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='30m'
