feat: get user by user name & follow user

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ REFRESH_TOKEN_EXPIRES_IN='7d'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='30m'
 
 DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
+DB_FOLLOWERS_COLLECTION='followers'
