--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/formidable": "^3.4.5",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.7.0"
