--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "sharp": "^0.32.6"
   }
 }
