feat(media): handle upload multiple image

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT=4000
 DB_NAME=twitter
 PASSWORD_SECRET='twitter@1303!'
 JWT_SECRET_ACCESS_TOKEN='54321!'
@@ -10,6 +11,9 @@ EMAIL_VERIFY_TOKEN_EXPIRES_IN='30m'
 
 DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
 DB_FOLLOWERS_COLLECTION='followers'
+
+HOST='https://twitter-api.vienhuynh.dev'
+
 
 GOOGLE_CLIENT_ID= 686495452746-f3qmbog1nd8hvj7ac12evbb0sf3it5vt.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET= 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
