--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon",
+    "dev": "npx nodemon --development",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --production",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.199",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.4.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
@@ -42,6 +43,7 @@
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "sharp": "^0.32.6"
   }
