--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.199",
+    "@types/mime": "^3.0.4",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.4.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
@@ -43,6 +44,7 @@
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "sharp": "^0.32.6"
