--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ EMAIL_VERIFY_TOKEN_EXPIRES_IN='30m'
 
 DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
 DB_FOLLOWERS_COLLECTION='followers'
+DB_TWEETS_COLLECTION='tweets'
 
 HOST='https://twitter-api.vienhuynh.dev'
 
