feat(tweet): create hashtags

--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ EMAIL_VERIFY_TOKEN_EXPIRES_IN='30m'
 DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
 DB_FOLLOWERS_COLLECTION='followers'
 DB_TWEETS_COLLECTION='tweets'
+DB_HASHTAGS_COLLECTION='hashtags'
+
 
 HOST='https://twitter-api.vienhuynh.dev'
 
