feat(tweet): bookmark tweet

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ DB_REFRESH_TOKEN_COLLECTION ='refresh_tokens'
 DB_FOLLOWERS_COLLECTION='followers'
 DB_TWEETS_COLLECTION='tweets'
 DB_HASHTAGS_COLLECTION='hashtags'
+DB_BOOKMARKS_COLLECTION='bookmarks'
 
 
 HOST='https://twitter-api.vienhuynh.dev'
