feat(aws-ses): send mail verify account

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,16 @@ DB_FOLLOWERS_COLLECTION='followers'
 DB_TWEETS_COLLECTION='tweets'
 DB_HASHTAGS_COLLECTION='hashtags'
 DB_BOOKMARKS_COLLECTION='bookmarks'
-
+CLIENT_URL ='http://localhost:3000'
 
 HOST='https://twitter-api.vienhuynh.dev'
 
 
-GOOGLE_CLIENT_ID= 686495452746-f3qmbog1nd8hvj7ac12evbb0sf3it5vt.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET= 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
-GOOGLE_REDIRECT_URI=  http://localhost:4000/users/oauth/google
+GOOGLE_CLIENT_ID= 
+GOOGLE_CLIENT_SECRET= 
+GOOGLE_REDIRECT_URI=  
+
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+AWS_REGION =
+SES_FROM_ADDRESS =
