--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.484.0",
     "@aws-sdk/client-ses": "^3.484.0",
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.2",
