--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.484.0",
     "@aws-sdk/client-ses": "^3.484.0",
+    "@aws-sdk/lib-storage": "^3.485.0",
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
