--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@aws-sdk/lib-storage": "^3.485.0",
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -51,6 +52,11 @@
     "mime": "^3.0.0",
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "socket.io": "^4.7.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^5.0.10"
   }
 }
