--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
